Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113507

macOS: Popups opening on wrong screen

    XMLWordPrintable

Details

    • macOS
    • 360152bdc (dev), bf01a8d6f (6.6), 56b47752b (tqtc/lts-6.5)

    Description

      To reproduce, set up Mac Spaces with multiple desktops. Then:

      1) Build the examples/widgets/painting/basicdrawing project.
      2) Run the application.
      3) Right click on the application icon in the Dock. You should see "Options".
      4) Under "Options", select Assign to "Desktop on Display 1"
      5) Move the application to the other Monitor.
      6) Click on the "Pen Join" combo box.

      -> the popup opens on wrong monitor

      Attachments

        For Gerrit Dashboard: QTBUG-113507
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes